--- a/package.json
+++ b/package.json
@@ -28,22 +28,24 @@
   },
   "files": [
     "dist/*.js",
-    "types/*.d.ts"
+    "types/index.d.ts"
   ],
   "types": "./types/index.d.ts",
   "devDependencies": {
-    "css-loader": "^0.28.11",
+    "css-loader": "^1.0.1",
     "pug": "^2.0.3",
     "pug-plain-loader": "^1.0.0",
-    "ts-loader": "^2.0.3",
-    "tslint": "^5.9.1",
-    "tslint-loader": "^3.6.0",
-    "typescript": "^2.3.2",
-    "vue-loader": "^12.0.3",
-    "vue-template-compiler": "^2.5.16",
-    "webpack": "^2.5.0"
+    "ts-loader": "^5.3.0",
+    "tslint": "^5.11.0",
+    "tslint-loader": "^3.5.4",
+    "typescript": "^3.1.4",
+    "vue-loader": "^15.4.2",
+    "vue-template-compiler": "^2.5.17",
+    "webpack": "^4.23.1",
+    "webpack-cli": "^3.1.2"
   },
   "dependencies": {
+    "awesome-typescript-loader": "^5.2.1",
     "dateformat": "^3.0.3",
     "timeago.js": "^3.0.2",
     "vue": "^2.5.16"
