--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,16 @@
 {
   "compilerOptions": {
-    "outDir": "./built/",
+    "outDir": "./lib/",
     "sourceMap": true,
     "strict": true,
-    "module": "es2015",
+    "module": "commonjs",
     "moduleResolution": "node",
-    "target": "es5"
+    "lib": [ "es2015", "dom" ],
+    "target": "es5",
+    "declaration": true
   },
   "include": [
     "./src/**/*"
-  ]
+  ],
+  "exclude": ["node_modules"]
 }
